--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "swr": "^2.3.7",
     "zustand": "^5.0.9"
   },
